# imp019

./: Cargo.toml
data/: age.csv  loc.csv  loc.txt  names_ca_first.txt  names_ca_last.txt  names_first.txt  names_last.txt  names_mx_first.csv  names_mx_last.txt  names_us_first.txt  names_us_last.csv  nick.txt
docs/: imp019.js  imp019_bg.wasm  index.html
src/: app.rs  data.rs  game.rs  league.rs  lib.rs  main.rs  player.rs  results.rs  schedule.rs  stat.rs  team.rs  util.rs
